优化转为MVC架构后出现的问题

--- a/docs/architecture/auth/注册登录与用户/项目结构.md
+++ b/docs/architecture/auth/注册登录与用户/项目结构.md
@@ -3,23 +3,7 @@
 text
 
 ```
-auth/
-├── api/                  # 用户接口层 (面向外部调用)
-│   ├── DTO/             # 数据传输对象：接收前端请求参数
-│   └── Controller/      # 控制器：参数校验 + 调用应用层 + 统一响应
-│
-├── application/          # 应用层 (业务流程编排)
-│   ├── Service接口/     # 服务接口定义
-│   ├── Service实现/     # 业务流程编排（指挥者角色）
-│   └── Convertor/       # DTO与Entity转换器
-│
-├── domain/               # 领域层 (业务核心)
-│   ├── Entity/          # 充血模型：包含业务逻辑的实体
-│   ├── Repository接口/  # 数据访问接口定义
-│   └── Domain Event/    # 领域事件定义
-│
-└── infrastructure/      # 基础设施层 (技术实现)
-    └── Repository实现/  # 数据访问具体实现（如MyBatis Mapper）
+
 ```
 
 
@@ -123,3 +107,16 @@ text
 
 后端技术框架为Java17+springboot3+mybatis-plus+PostgreSQL+Redis+Lombok+Knife4j +slf4j+docker
 
+建议的划分方式如下：
+1. Auth 模块（身份中心）
+   职责：提供“主体（Subject）”的完整画像。
+   管什么：用户账号、密码、部门归属、全局角色（如“集团管理员”）、岗位。
+   输出什么：当用户请求过来时，Auth 模块（或网关）告诉业务模块：
+   “当前用户是 ID=1001，部门=研发部，角色=部门经理，岗位=Java开发”。
+2. Folder/File 模块（资源与策略中心）
+   职责：定义“客体（Object）”与“策略（Policy）”，并执行判定。
+   管什么：文件夹结构、文件元数据、资源授权表（Resource Permission Table）。
+   做什么：
+   存储：在 folder 数据库中维护一张 permission 表。
+   逻辑：处理权限继承（Inheritance）、阻断（Override）、有效期（TTL）。
+   判定：拿着 Auth 传过来的“用户画像”，对比自己的“资源授权表”，算出结果。
